--- a/k9mail/src/main/res/values/strings.xml
+++ b/k9mail/src/main/res/values/strings.xml
@@ -256,6 +256,10 @@ Please submit bug reports, contribute new features and ask questions at
     <string name="debug_enable_debug_logging_summary">Log extra diagnostic information</string>
     <string name="debug_enable_sensitive_logging_title">Log sensitive information</string>
     <string name="debug_enable_sensitive_logging_summary">May show passwords in logs.</string>
+    <string name="debug_use_condstore_extension_title">Use CONDSTORE</string>
+    <string name="debug_use_condstore_extension_summary">Use the CONDSTORE extension if available during synchronization</string>
+    <string name="debug_use_qresync_extension_title">Use QRESYNC</string>
+    <string name="debug_use_qresync_extension_summary">Use the QRESYNC extension if available during synchronization</string>
 
     <string name="message_list_load_more_messages_action">Load more messages</string>
     <string name="message_to_fmt">To:<xliff:g id="counterParty">%s</xliff:g></string>
